--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,18 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-  },
-  "customizations": {
+	// "image": "mcr.microsoft.com/devcontainers/universal:2",
+	"image": "intel/oneapi-basekit:2024.0.1-devel-ubuntu22.04",
+	"features": {},
+	"customizations": {
 		"vscode": {
 			"extensions": [
 				"ms-vscode.cpptools-extension-pack",
 				"ms-azuretools.vscode-docker",
 				"github.copilot",
-				"ms-python.python"
+				"ms-python.python",
+				"wakatime.vscode-wakatime",
+				"yzhang.markdown-all-in-one",
+				"shd101wyy.markdown-preview-enhanced"
 			]
 		}
-	},
+	}
 }
