--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,6 @@
         "cfenv": "cpp",
         "cinttypes": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/gcc",
+    "C_Cpp.default.compilerPath": "/usr/bin/gcc-11",
     "ros.distro": "humble"
 }
